# cromo

./: .gitignore  DemoNotebook.ipynb  Dockerfile  README.md  docker-compose.yml  requirements.txt  server.py  setup.cfg  setup.py
.github/workflows/: docker.yml  python-packages.yml
openapi/: cromo-api.yaml
src/cromo/: __main__.py  _utils.py  api.py  constants.py
src/cromo/catalogs/: data_catalog.py  model_catalog.py
src/cromo/click_encapsulate/: commands.py
src/cromo/metadata/: sensors.py
src/cromo/resources/ontology/: catalog-v001.xml  execution.owl
src/cromo/resources/rules/: 141f6a40-7d88-47e9-9e0a-34361076e107.rules  3aa40022-9689-4399-8331-2ecdd4e8a239.rules  4c2d27b9-c992-41b8-ae85-b472769ef2bd.rules  cycles-0.10.2-alpha-collection.rules  cycles.rules  d46126eb-3484-4369-8826-507410a670a3.rules  e7091da5-3f3c-4c68-89b5-e4200f703b27.rules  eb3472a7-b10e-444d-ae40-0ce815f97786.rules  f42373c2-c097-4bae-addc-d9c583731aa6.rules  f74cf01e-3c9c-41ee-b34b-7efb1ad7aba2.rules
src/cromo/test/: awash.geojson  georgetown.geojson  grassvalley.geojson  whiterock.geojson
