[metadata]
name = cromo
version = 1.0.0
author = Varun Ratnakar
author_email = varunr@isi.edu
description = Constraint Reasoning Over MOdels
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mintproject/cromo
project_urls =
    Bug Tracker = https://github.com/mintproject/cromo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    Cython>=0.29
    owlready2>=0.29
    semver>=2.8.1
    requests
    modelcatalog-api==6.0.0
    dame-cli>=5.4.5


[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    cromo = cromo.__main__:cli